add red theme to landing page

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -13,8 +13,11 @@
         <div class="container">
             <div class="nav">
                 <div class="logo">
-                    <h1>🚀 BetaBay</h1>
-                    <span>App Testing Platform</span>
+                    <img src="BetaBay-Logo.jpg" alt="BetaBay" class="logo-image">
+                    <div class="logo-text">
+                        <h1>BetaBay</h1>
+                        <span>App Testing Platform</span>
+                    </div>
                 </div>
                 <div class="nav-actions">
                     <button id="login-btn" class="btn btn-primary">
@@ -203,8 +206,11 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="logo">
-                        <h3>🚀 BetaBay</h3>
-                        <p>The ultimate app testing platform</p>
+                        <img src="BetaBay-Logo.jpg" alt="BetaBay" class="logo-image">
+                        <div class="logo-text">
+                            <h3>BetaBay</h3>
+                            <p>The ultimate app testing platform</p>
+                        </div>
                     </div>
                 </div>
                 <div class="footer-section">
