--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="nav">
                 <div class="logo">
-                    <img src="BetaBay-Logo.jpg" alt="BetaBay" class="logo-image">
+                    <img src="BetaBay-Logo.png" alt="BetaBay" class="logo-image">
                     <div class="logo-text">
                         <h1>BetaBay</h1>
                         <span>App Testing Platform</span>
